# JobSpy

./: .gitignore  README.md  job.py  proxies_test.py  pyproject.toml
Output/: jobs.csv  jobs_2.csv  jobs_2_num.csv  jobs_numbered.csv
Proxies/: fetch_proxies.py  proxies_test.py  working_proxies.txt
Run/: job.py  job_multi.py
jobspy/: cli.py
jobspy_runner/: cli.py
